# thunderscope-rs

./: .gitignore  Cargo.toml
doc/: datamover_register.txt  fifo.txt  plot_1ch.py  transfer_counter_register.txt
src/: buffer.rs  capture.rs  config.rs  device.rs  lib.rs  params.rs  trigger.rs
src/regs/: adc.rs  axi.rs  hmc.rs  mod.rs
src/sys/: linux.rs  mod.rs  stub.rs
