[package]
name = "thunderscope"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.11"
bitflags = "2.6"
bipbuffer = "0.1"

winit = { version = "0.30", optional = true }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
glow = { version = "0.13", optional = true }

[features]
default = ["gui"]
gui = ["dep:winit", "dep:glutin", "dep:glutin-winit", "dep:glow"]

[[bin]]
name = "thunderscope-test"
path = "src/bin/test.rs"

[[bin]]
name = "thunderscope-gui"
path = "src/bin/gui/main.rs"
required-features = ["gui"]
