[package]
name = "thunderscope"
version = "0.1.0"
edition = "2021"
default-run = "thunderscope-gui"

[[bin]]
name = "thunderscope-gui"
path = "src/bin/gui/main.rs"
required-features = ["gui"]

[[bin]]
name = "thunderscope-test"
path = "src/bin/test.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
bitflags = "2.6"
bytemuck = "1.16"
wide = "0.7"
libc = "0.2"
vmap = "0.6"

winit = { version = "0.30", optional = true }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
glow = { version = "0.13", optional = true }

[features]
default = ["gui"]
gui = ["dep:winit", "dep:glutin", "dep:glutin-winit", "dep:glow"]

[profile.dev]
opt-level = 2
