[package]
name = "thunderscope"
description = "Driver library and simple graphical interface for the ThunderScope oscilloscope"
version = "0.1.0"
edition = "2021"
default-run = "thunderscope-gui"

[[bin]]
name = "thunderscope-gui"
path = "src/bin/gui/main.rs"
required-features = ["gui"]

[[bin]]
name = "thunderscope-test"
path = "src/bin/test.rs"

[[bin]]
name = "thunderscope-dc_offset"
path = "src/bin/cal/dc_offset.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
bitflags = "2.6"
bytemuck = "1.16"
wide = "0.7"
libc = "0.2"
vmap = "0.6"

raw-window-handle = { version = "0.5", optional = true }
winit = { version = "0.29", optional = true, default-features = false, features = ["rwh_05", "x11"] }
glutin = { version = "0.31", optional = true }
glutin-winit = { version = "0.4.2", optional = true }
glow = { version = "0.13", optional = true }
# `docking` feature, enabled by default, lacks `RasterizerDensity`
imgui = { git = "https://github.com/whitequark/imgui-rs", branch = "imgui-1.90.1", optional = true, default-features = false }
imgui-winit-support = { git = "https://github.com/whitequark/imgui-rs", branch = "imgui-1.90.1", optional = true }
imgui-glow-renderer = { git = "https://github.com/whitequark/imgui-rs", branch = "imgui-1.90.1", optional = true }

# [patch."https://github.com/whitequark/imgui-rs"]
# imgui = { path = "../imgui-rs/imgui" }

[features]
default = ["gui", "hardware"]
hardware = []
gui = [
    "dep:raw-window-handle",
    "dep:winit",
    "dep:glutin",
    "dep:glutin-winit",
    "dep:glow",
    "dep:imgui",
    "dep:imgui-winit-support",
    "dep:imgui-glow-renderer",
]
raw-window-handle = ["dep:raw-window-handle"]

[profile.dev]
opt-level = 2
